@@ -85,6 +85,8 @@ Here is a history of user visible changes to Mailman.
     - Fixed a bug in admindb.py in the implementation of replacing "No Reason
       Given" with the default rejection reason.  Bug #325016.
 
+    - Changed Gui/Topics.py to validate regexps in VERBOSE mode.  Bug #327008.
+
   Miscellaneous
 
     - Added Lindsay Haisley's courier_to_mailman.py to the contrib directory.
